--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -52,6 +52,30 @@ error.input.toolong=The text you entered is to long ({1} characters). Only {1} c
 error.select.one=You need to select at least one question.
 error.wrongFloat=Wrong number format. Example\: 1.0, 0.5, 0.2
 export.item=Export
+export.log=Log
+export.log.header.additional.informations=$\:general.additional.informations
+export.log.header.assessment.type=$\:question.assessmentType
+export.log.header.context=$\:educational.context
+export.log.header.copyright=$\:rights.copyright
+export.log.header.coverage=$\:general.coverage
+export.log.header.creator=$\:rights.creator
+export.log.header.differentiation=$\:question.differentiation
+export.log.header.difficulty=$\:question.difficulty
+export.log.header.item.type=$\:question.type
+export.log.header.keywords=$\:general.keywords
+export.log.header.language=$\:general.language
+export.log.header.learningTime=$\:educational.learningTime
+export.log.header.log.action=Action
+export.log.header.log.author=Changed by
+export.log.header.log.date=Date
+export.log.header.numOfAnswerAlternatives=$\:question.numOfAnswerAlternatives
+export.log.header.status=$\:lifecycle.status
+export.log.header.stdevDifficulty=$\:question.stdevDifficulty
+export.log.header.taxonomic.path=$\:classification.taxonomic.path
+export.log.header.title=$\:general.title
+export.log.header.topic=$\:general.topic
+export.log.header.usage=$\:question.usage
+export.log.header.version=$\:lifecycle.version
 export.overview.accept=Used
 general=General
 general.additional.informations=Add. information
