OO-3116: Lock a question item when a user is editing the question item

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -130,6 +130,7 @@ lifecycle.status.revised=Revision
 lifecycle.status.unavailable=Unavailable
 lifecycle.version=Version
 list=Listen
+locked.readonly=Die Frage ist bereits durch '{0}' ge\u00F6ffnet. Sie kann deshalb nicht bearbeitet werden.
 manage.owners=Bearbeiten
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
 menu.admin=Administration
@@ -176,6 +177,7 @@ pool.public=\u00D6ffentlich
 presentation.title=Fragenpool
 previous=Vorherige
 process.activate.not.reviewable.description=Fragen im Format 'QTI 1.2' k\u00F6nnen nicht beurteilt werden. Bitte konvertieren Sie die Frage zuerst in das Format 'QTI 2.1'.
+process.activate.locked=Die Frage wird durch '{0}' bearbeitet. Der Beurteilungsprozess kann deshlab nicht gestartet werden.
 process.activate.review=Frage beurteilen
 process.activate.review.description=Die Frage befindet sich im Status 'Review'. Bitte \u00FCberpr\u00FCfen Sie die Frage sorgf\u00E4ltig auf fachlich und eignungstechnische Korrektheit und geben Sie anschliessend mit der untenstehenden Schaltfl\u00E4che Ihre Bewertung ab.
 process.activate.start.review=Beurteilungsprozess starten
