--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -130,6 +130,7 @@ lifecycle.status.revised=Revision
 lifecycle.status.unavailable=Unavailable
 lifecycle.version=Version
 list=Lists
+locked.readonly=The question is opened by '{0}'. Therefore, you are not able to edit the question.
 manage.owners=Edit
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Bookmark"> </i>
 menu.admin=Administration
@@ -175,6 +176,7 @@ pool.owners=Owners
 pool.public=Public
 presentation.title=Question bank
 process.activate.not.reviewable.description=It is not possible to review questions in the format 'QTI 1.2'. Please previously convert the question to the format 'QTI 2.1'.
+process.activate.locked=The question is opened by '{0}'. Therefore, you are not able to start the review process.
 process.activate.review=Review question
 process.activate.review.description=The question is in the status 'Review'. Please review the question carefully to technical correctness and with regards to content. Subsequently you have to push the button below to rate the question. 
 process.activate.start.review=Start review process
