OO-3116: User should be able to delete his own questions. Wording.

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -50,6 +50,14 @@ educational.learningTime.minute=m
 educational.learningTime.second=s
 error.input.toolong=Leider ist Ihr gerade eingegebener Text mit {1} Zeichen zu lang. Bitte beschr\u00E4nken Sie sich auf maximal {0} Zeichen.
 error.select.one=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen.
+error.select.one.author=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, bei welcher Sie die Autoren bearbeiten k\u00F6nnen.
+error.select.one.convert=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, welche Sie konvertieren k\u00F6nnen.
+error.select.one.copy=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, welche Sie kopieren k\u00F6nnen.
+error.select.one.create.test=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, welche Sie in einem Test verwenden k\u00F6nnen.
+error.select.one.delete=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, welche Sie l\u00F6schen k\u00F6nnen.
+error.select.one.export=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, welche Sie exportieren k\u00F6nnen.
+error.select.one.metadata=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, bei welcher Sie die Metadaten \u00E4ndern k\u00F6nnen.
+error.select.one.remove=Sie m\u00FCssen mindestens eine Frage w\u00E4hlen, welche Sie entfernen k\u00F6nnen.
 error.wrongFloat=Falsches Zahlenformat. Beispiele\: 1.0, 0.5,§ 0.2
 export.item=Export
 export.log=Log
@@ -181,7 +189,7 @@ process.activate.locked=Die Frage wird durch '{0}' bearbeitet. Der Beurteilungsp
 process.activate.review=Frage beurteilen
 process.activate.review.description=Die Frage befindet sich im Status 'Review'. Bitte \u00FCberpr\u00FCfen Sie die Frage sorgf\u00E4ltig auf fachlich und eignungstechnische Korrektheit und geben Sie anschliessend mit der untenstehenden Schaltfl\u00E4che Ihre Bewertung ab.
 process.activate.start.review=Beurteilungsprozess starten
-process.activate.start.review.description=Diese Frage befindet sich im Status 'Draft'. Wenn die Frage fertig erstellt ist, k\u00F6nnen Sie den Beurteilungsprozess starten. Die Frage kann anschliessend nicht mehr bearbeitet werden.
+process.activate.start.review.description=Hier k\u00F6nnen Sie die Frage erstellen und \u00FCberarbeiten, bis sie einer ausreichenden Qualit\u00E4t vorliegt. Wenn die Frage fertig erstellt ist, k\u00F6nnen Sie den Beurteilungsprozess starten. Die Frage kann anschliessend nicht mehr bearbeitet werden.
 process.comment=Kommentar
 process.confirm.endOfLife=Die Frage kann nach dem Setzen des "$\:lifecycle.status.endOfLife" nicht mehr verwendet werden .Wollen Sie die Frage "{0}" wirklich auf End of life setzen?
 process.final=Final
