--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -14,7 +14,7 @@ classification.taxonomy.parents=Path
 collection.creationDate=Created at
 collection.name=Name
 commands=Question
-confirm.delete=Do you really want to delete this question "{0}"? It will be deleted from all groups, pools and lists.
+confirm.delete=Do you really want to delete the question "{0}"? It will be deleted from all groups, pools and lists as well.
 confirm.delete.plural=Do you really want to delete these questions "{0}"? They will be deleted from all groups, pools and lists.
 confirm.delete.source=Do you really want to delete this list?
 confirm.unshare=Do your really want to remove this question "{0}"?
@@ -50,6 +50,14 @@ educational.learningTime.minute=m
 educational.learningTime.second=s
 error.input.toolong=The text you entered is to long ({1} characters). Only {1} characters are allowed.
 error.select.one=You need to select at least one question.
+error.select.one.author=You need to select at least one question, for which you can change the authors.
+error.select.one.convert=You need to select at least one question, which you can convert.
+error.select.one.copy=You need to select at least one question, which you can copy.
+error.select.one.create.test=You need to select at least one question, which you can use in a test.
+error.select.one.delete=You need to select at least one question, which you can delete.
+error.select.one.export=You need to select at least one question, which you can export.
+error.select.one.metadata=You need to select at least one question, which you can edit.
+error.select.one.remove=You need to select at least one question, which you can remove.
 error.wrongFloat=Wrong number format. Example\: 1.0, 0.5, 0.2
 export.item=Export
 export.log=Log
@@ -180,7 +188,8 @@ process.activate.locked=The question is opened by '{0}'. Therefore, you are not 
 process.activate.review=Review question
 process.activate.review.description=The question is in the status 'Review'. Please review the question carefully to technical correctness and with regards to content. Subsequently you have to push the button below to rate the question. 
 process.activate.start.review=Start review process
-process.activate.start.review.description=The question is in the status 'Draft'. If the question is completely created, you have to start the review process by pushing the button below. Afterwards the question can not be edited anymore.
+process.activate.start.review.description=You can now create and revise the question, until it has a sufficient quality. If the question is completely created, you have to start the review process by pushing the button below. Afterwards the question can not be edited anymore.
+Hier k\u00F6nnen Sie die Frage erstellen und \u00FCberarbeiten, bis sie einer ausreichenden Qualit\u00E4t vorliegt. 
 process.comment=Comment
 process.confirm.endOfLife=If a question is end of life, the question can not be used anymore. Do you really want to set the end of life for the question "{0}"?
 process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
