--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_it.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_it.properties
@@ -1,9 +1,8 @@
 #Mon Jun 27 11:28:43 CEST 2016
-add.taxonomyLevel=Creare una disciplina
 admin.levels.intro=Creare i livelli che si applicano ai livelli educativi della tua organizzazione. Esempi di livelli in un contesto accademico potrebbero essere\: scuola primaria, scuola secondaria di primo grado, scuola secondaria di secondo grado, laurea triennale, laurea magistrale, master. In un contesto aziendale, i livelli potrebbero essere\: senza apprendistato, con corso di formazione professionale, amministrazione, quadro, dirigenza.
 admin.licenses.intro=Puoi creare ulteriori tipi di licenza se i tipi predefiniti non sono sufficienti. Nota\: i tipi predefiniti non possono essere eliminati.
 admin.pools.intro=Creare uno o pi\u00F9 pool di domande. Un pool \u00E8 un blocco di domande che permette a tutti gli utenti con diritti di autore di scambiare domande (accesso pubblico). \u00C8 possibile anche optare per un pool con accesso riservato solo ad alcuni autori, per esempio il personale di un dipartimento (accesso privato).
-admin.studyfields.intro=Le discipline permettono una indicizzazione tecnica delle domande, organizzata come una struttura gerarchica per modellare i potenziali programmi di studio. Selezionare "$\:add.taxonomyLevel" al fine di creare una nuova disciplina, o selezionarne una esistente per modificarla.
+admin.studyfields.intro=Le discipline permettono una indicizzazione tecnica delle domande, organizzata come una struttura gerarchica per modellare i potenziali programmi di studio. Selezionare "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" al fine di creare una nuova disciplina, o selezionarne una esistente per modificarla.
 admin.types.intro=Creare ulteriori tipi di domande se i tipi predefiniti esistenti non sono sufficienti. Nota\: i tipi di domanda predefiniti non possono essere eliminati.
 create.level=Creare un livello
 create.license=Creare una licenza
