--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -1,5 +1,4 @@
 #Wed Aug 28 16:15:20 CEST 2013
-add.taxonomyLevel=Fachbereich erstellen
 admin.configuration.title=Fragenpool
 admin.levels.intro=Erstellen Sie die verf\u00FCgbaren Stufen die f\u00FCr Ihr Ausbildungslevel Sinn machen. Beispiele f\u00FCr Stufen im schulischen Kontext sind\: Unterstufe, Oberstufe, Gymnasium, Bachelor, Master. In einem Unternehmenskontext k\u00F6nnten Stufen so aussehen\: ohne Berufsausbildung, mit Berufsausbildung, F\u00FChrungsfunktion, Administration, Kader, Management
 admin.licenses.intro=Erstellen Sie zus\u00E4tzliche Lizenztypen wenn die Standard Lizenztypen von OpenOLAT nicht gen\u00FCgen. Die Standard Lizenztypen k\u00F6nnen nicht gel\u00F6scht werden.
@@ -7,7 +6,7 @@ admin.pool.manager.title=Rechte Poolverwalter
 admin.pools.intro=Erstellen Sie einen oder mehrere Fragenpools. Ein Fragenpool ist eine Fragendatenbank die allen Autoren des Systems f\u00FCr den Austausch von Fragen zur Verf\u00FCgung steht (\u00D6ffentlich). Optional l\u00E4sst sich ein Fragenpool auch auf einige wenige Autoren einschr\u00E4nken, z.B. die Mitarbeiter einer Abteilung (Nicht \u00F6ffentlich).
 admin.review.process.decision.type=Beurteilungsmethode
 admin.review.process.title=Beurteilungsprozess
-admin.studyfields.intro=Fachbereiche dienen der fachlichen Verschlagwortung der Fragen. Es handelt sich dabei um eine hierarchische Struktur die in der Regel die m\u00F6glichen Studieng\u00E4nge abbildet. W\u00E4hlen Sie die Schaltfl\u00E4che "$\:add.taxonomyLevel" um einen neuen Fachbereich hinzuzuf\u00FCgen. W\u00E4hlen Sie einen bestehenden Fachbereich um diesen zu editieren.
+admin.studyfields.intro=Fachbereiche dienen der fachlichen Verschlagwortung der Fragen. Es handelt sich dabei um eine hierarchische Struktur die in der Regel die m\u00F6glichen Studieng\u00E4nge abbildet. W\u00E4hlen Sie die Schaltfl\u00E4che "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" um einen neuen Fachbereich hinzuzuf\u00FCgen. W\u00E4hlen Sie einen bestehenden Fachbereich um diesen zu editieren.
 admin.types.intro=Erstellen Sie zus\u00E4tzliche Fragetypen, wenn die Standard Fragetypen von OpenOLAT nicht gen\u00FCgen. Die Standard Fragetypen k\u00F6nnen nicht gel\u00F6scht werden. 
 average.rating.for.final=Durchschnittliche Bewertung f\u00FCr Status "final"
 collections.enabled=Listen
