--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -1,5 +1,4 @@
 #Wed Aug 28 17:36:55 CEST 2013
-add.taxonomyLevel=Create subject
 admin.configuration.title=Question bank
 admin.levels.intro=Create those levels that apply to your organisations educational level. Examples for levels in an academic context could be elementary school, middle school, high school, bachelor, master. Within a corporation context, levels could be the following\: without apprenticeship, with vocational training, administration, middle management, CO
 admin.licenses.intro=You can create more license types if the default license types are not sufficient. Please note that the default licenses cannot be deleted.
@@ -7,7 +6,7 @@ admin.pool.manager.title=Rights pool manager
 admin.pools.intro=Create one or more question pools. A pool is an question bank that allows all users with author rights the exchange of question items (public access). You can also opt for a pool with only a select few authors, e.g. a departments' staff (private access).
 admin.review.process.decision.type=Decision method
 admin.review.process.title=Review process
-admin.studyfields.intro=Subjects allow for technical indexing the question items. It's organized as a hierarchical structure for modelling the potential degree programs. Select the "$\:add.taxonomyLevel" in order to create a new subject, or select an existing one for editing purposes.
+admin.studyfields.intro=Subjects allow for technical indexing the question items. It's organized as a hierarchical structure for modelling the potential degree programs. Select the "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" in order to create a new subject, or select an existing one for editing purposes.
 admin.types.intro=Create more question types if the existing default types aren't sufficient. Please note that the default question types can not be deleted.
 collections.enabled=Lists
 create.infos.page=Create infos page
