--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pl.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pl.properties
@@ -1,9 +1,8 @@
 #Fri Oct 10 10:54:39 CEST 2014
-add.taxonomyLevel=Utw\u00F3rz przedmiot
 admin.levels.intro=Utw\u00F3rz poziomy odpowiadaj\u0105ce Twojej organizacji. Przyk\u0142ady poziom\u00F3w w kontek\u015Bcie "akademickim", to np. szko\u0142a podstawowa, gimnazjum, liceum, studia licencjackie, magisterskie. W kontek\u015Bcie korporacji, poziomy mog\u0142yby by\u0107 nast\u0119puj\u0105ce\: bez sta\u017Cu, z wykszta\u0142ceniem zawodowym, administracja, zarz\u0105dzanie, CO
 admin.licenses.intro=Mo\u017Cesz utworzy\u0107 wi\u0119cej rodzaj\u00F3w licencji, je\u015Bli domy\u015Blne nie s\u0105 wystarczaj\u0105ce. Pami\u0119taj, \u017Ce domy\u015Blne rodzaje nie mog\u0105 by\u0107 usuni\u0119te.
 admin.pools.intro=Utw\u00F3rz jedn\u0105 lub wi\u0119cej pul pyta\u0144. Pula jest zbiorem pyta\u0144, kt\u00F3ry umo\u017Cliwia wszystkim u\u017Cytkownikom z prawami autor\u00F3w wymian\u0119 pyta\u0144 (publiczny dost\u0119p). Mo\u017Cna r\u00F3wnie\u017C wybra\u0107 pul\u0119 tylko dla kilku wybranych autor\u00F3w, np. pracownik\u00F3w wydzia\u0142u (prywatny dost\u0119p).
-admin.studyfields.intro=Przedmioty pozwalaj\u0105 na indeksowanie techniczne pyta\u0144. Jest to zorganizowane w hierarchiczn\u0105 struktur\u0119 w celu modelowania kolejnych stopni. Wybierz "$\:add.taxonomyLevel" w celu utworzenia nowego przedmiotu lub wybierz istniej\u0105cy do edycji.
+admin.studyfields.intro=Przedmioty pozwalaj\u0105 na indeksowanie techniczne pyta\u0144. Jest to zorganizowane w hierarchiczn\u0105 struktur\u0119 w celu modelowania kolejnych stopni. Wybierz "$org.olat.modules.taxonomy.ui\:add.taxonomy.level" w celu utworzenia nowego przedmiotu lub wybierz istniej\u0105cy do edycji.
 admin.types.intro=Mo\u017Cesz utworzy\u0107 wi\u0119cej rodzaj\u00F3w pyta\u0144, je\u015Bli domy\u015Blne nie s\u0105 wystarczaj\u0105ce. Pami\u0119taj, \u017Ce domy\u015Blne rodzaje nie mog\u0105 by\u0107 usuni\u0119te.
 create.level=Utw\u00F3rz poziom
 create.license=Utw\u00F3rz licencj\u0119
