--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pt_BR.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_pt_BR.properties
@@ -1,9 +1,8 @@
 #Thu Apr 28 20:30:53 CEST 2016
-add.taxonomyLevel=Criar assunto
 admin.levels.intro=Criar esses n\u00EDveis que se aplicam ao n\u00EDvel educacional da sua organiza\u00E7\u00E3o. Exemplos de n\u00EDveis em um contexto acad\u00EAmico poderia ser\: ensino fundamental, ensino m\u00E9dio, gradua\u00E7\u00E3o, mestrado. Dentro de um contexto corporativo, os n\u00EDveis poderia ser o seguinte\: sem aprendizagem, com forma\u00E7\u00E3o profissional, administra\u00E7\u00E3o, ger\u00EAncia m\u00E9dia, diretoria, etc...
 admin.licenses.intro=Voc\u00EA pode criar mais tipos de licen\u00E7a, se os tipos de licen\u00E7a padr\u00E3o n\u00E3o forem suficientes. Por favor, note que as licen\u00E7as padr\u00E3o n\u00E3o podem ser exclu\u00EDdas.
 admin.pools.intro=Criar um ou mais grupos de perguntas. O reservat\u00F3rio \u00E9 um banco de perguntas que permite que todos os usu\u00E1rios com direitos de autor a troquem perguntas (acesso p\u00FAblico). Voc\u00EA tamb\u00E9m pode optar por um reservat\u00F3rio com apenas um grupo selecionado de autores. Por exemplo, usu\u00E1rios de um departamento (acesso privado).
-admin.studyfields.intro=Assuntos, permitem a indexa\u00E7\u00E3o t\u00E9cnica de perguntas. \u00C9 organizado como uma estrutura hier\u00E1rquica para modelar potenciais programas de gradua\u00E7\u00E3o. Selecione a op\u00E7\u00E3o "$\:add.taxonomyLevel", a fim de criar um novo assunto, ou selecionar um j\u00E1 existente para fins de edi\u00E7\u00E3o.
+admin.studyfields.intro=Assuntos, permitem a indexa\u00E7\u00E3o t\u00E9cnica de perguntas. \u00C9 organizado como uma estrutura hier\u00E1rquica para modelar potenciais programas de gradua\u00E7\u00E3o. Selecione a op\u00E7\u00E3o "$org.olat.modules.taxonomy.ui\:add.taxonomy.level", a fim de criar um novo assunto, ou selecionar um j\u00E1 existente para fins de edi\u00E7\u00E3o.
 admin.types.intro=Crie mais tipos de perguntas se os tipos existentes n\u00E3o s\u00E3o suficientes. Por favor, note que os tipos de perguntas padr\u00E3o n\u00E3o podem ser exclu\u00EDdos.
 create.infos.page=Criar p\u00E1gina de informa\u00E7\u00F5es
 create.level=Criar n\u00EDvel
