OO-3116: Show warning if no info page is configured in the question pool

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -265,3 +265,5 @@ topnav.qpool=Fragenpool
 topnav.qpool.alt=Fragedatenbanken und Freigabe von Fragen
 unshare.item=Entfernen
 used=Verwendet
+warning.qpool.index.emtpy=Die Dokumentpool-Infoseite wurde nicht konfiguriert. Bitten Sie den Systemadministrator, eine Infoseite im <strong>Administrationsbereich des Fragenpools</strong> hinzuzuf\u00FCgen.
+
