--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -264,3 +264,4 @@ topnav.qpool=Question bank
 topnav.qpool.alt=Question pools and shares
 unshare.item=Remove
 used=Used
+warning.qpool.index.emtpy=The question pool info page has not been configured properly. Please ask the system administrator to add an info page in the <strong>question pool administration</strong>.
