OO-3264: extend the limit to 10'000'000 charcters

--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_de.properties
@@ -4,7 +4,7 @@
 
 
 
-
+error.too.long=Die Vorlage ist zu gross. Maximale Gr\u00F6sse ist {0}\!
 recipients.all=Alle anzeigen
 recipients.hide=Weniger anzeigen
 recipients.more=... und {0} weitere Empf\u00E4nger
