--- a/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/core/util/mail/_i18n/LocalStrings_en.properties
@@ -1,6 +1,7 @@
 #Tue Nov 15 09:58:15 CET 2016
 add.email=Add
 contact.cp.from=Copy sent to addresser
+error.too.long=the template is too big. The maximal size is {0}\!
 footer.no.userdata=<p>This message has been sent automatically via the learning platform OpenOLAT\: {0}</p>
 footer.with.userdata=<p>Sender\: {2} {3} ({0}), {4} {5}</p><p>This message has been sent via the learning platform OpenOLAT\: {1}</p>
 mail.action.emtpy=Select at least one e-mail to perform this action.
