OO-3116: Show number of ratings in the list of questions, show ratings in the detail view of a question.

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -168,6 +168,7 @@ menu.queries=Fragen
 menu.queries.all=Alle Fragen
 menu.queries.without.taxonomy.level=Ohne Fachbereich
 menu.queries.without.author=Ohne Autor
+menu.ratings=Bewertungen
 menu.review=Beurteilung
 menu.share=Freigaben
 metadatas=Metadaten
@@ -178,6 +179,7 @@ my.list=Meine Listen
 my.share=Meine Shares
 new.item=Frage erstellen
 next=N\u00E4chste
+numberOfRatings=Anzahl Bewertungen
 pool.key=ID
 pool.name=Name
 pool.owners=Besitzer
@@ -224,6 +226,8 @@ question.type=Typ
 question.usage=Verwendung in Tests
 quickview=<i class\='o_icon o_icon_quickview'> </i>
 rating=Bewertung
+rating.creation.date=Datum
+rating.empty.table=Diese Frage wurde noch nicht beurteilt.
 remove=-
 rename.collection=Liste umbenennen
 rights=Rechte
