--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -168,6 +168,7 @@ menu.queries=Questions
 menu.queries.all=All questions
 menu.queries.whithout.taxonomy.level=Without subject
 menu.queries.whithout.author=Without author
+menu.ratings=Ratings
 menu.review=Review
 menu.share=Public shares
 metadatas=Metadata
@@ -178,6 +179,7 @@ my.list=My lists
 my.share=My shares
 new.item=Create question
 next=Next
+numberOfRatings=Number of ratings
 pool.key=ID
 pool.name=Name
 pool.owners=Owners
@@ -223,6 +225,8 @@ question.type=Type
 question.usage=Used in tests
 quickview=<i class\='o_icon o_icon_quickview'> </i>
 rating=Rating
+rating.creation.date=Date
+rating.empty.table=This question was not rated yet.
 remove=-
 rename.collection=Rename list
 rights=Rights
