OO-3116: Prevent the undesired deletion of questions

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -14,8 +14,12 @@ classification.taxonomy.parents=Pfad
 collection.creationDate=Erstellt am
 collection.name=Name
 commands=Frage
-confirm.delete=Wollen Sie wirklich diese Frage "{0}" l\u00F6schen? Sie wird von allen Gruppen, allen Pools und allen Listen gel\u00F6scht.
-confirm.delete.plural=Wollen Sie wirklich diese Fragen "{0}" l\u00F6schen? Sie werden von allen Gruppen, allen Pools und allen Listen gel\u00F6scht.
+confirm.delete.button=L\u00F6schen
+confirm.delete.confirmation=Alle Fragen l\u00F6schen
+confirm.delete.confirmation.error=Bitte best\u00E4tigen.
+confirm.delete.questions=Fragen
+confirm.delete.title=L\u00F6schen
+confirm.delete.message=Wollen Sie diese Fragen wirklich l\u00F6schen? Sie k\u00F6nnen nicht wiederhergestellt werden.
 confirm.delete.source=Wollen Sie wirklich diese Liste l\u00F6schen?
 confirm.unshare=Wollen Sie wirklich diese Frage von "{0}" entfernen?
 convert.format=Format
