--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -14,9 +14,12 @@ classification.taxonomy.parents=Path
 collection.creationDate=Created at
 collection.name=Name
 commands=Question
-confirm.delete=Do you really want to delete the question "{0}"? It will be deleted from all groups, pools and lists as well.
-confirm.delete.plural=Do you really want to delete these questions "{0}"? They will be deleted from all groups, pools and lists.
-confirm.delete.source=Do you really want to delete this list?
+confirm.delete.button=Delete
+confirm.delete.confirmation=Delete all questions
+confirm.delete.confirmation.error=Please confirm
+confirm.delete.questions=Questions
+confirm.delete.title=Delete
+confirm.delete.message=Do you really want to permanently delete these questions? They can not be recovered.
 confirm.unshare=Do your really want to remove this question "{0}"?
 convert.item=Convert
 convert.item.not.possible=You haven't selected any question you can convert.
