OO-3146: option in QTI 2.1 course element to deinfe a test period

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -6,6 +6,8 @@ Intro.surv=Dr\u00FCcken Sie Start, um mit dem Fragebogen zu beginnen.
 Intro.test=Dr\u00FCcken Sie Start, um den Test zu beginnen.
 attempts.nomoreattempts=Es stehen Ihnen keine weiteren Versuche zur Verf\u00FCgung.
 attempts.yourattempts=Anzahl gemachter Versuche
+block.dates.start=Sie werden den Test am <strong>{0}</strong> starten k\u00F6nnen.
+block.dates.start.end=Der Test kann zwischen den <strong>{0}</strong> und den <strong>{1}</strong> gestartet werden.
 button.export=Resultate exportieren
 button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=\u00C4nderungsverlauf der Ressource
@@ -141,6 +143,7 @@ qti.form.summary.compact=Kompakt (ohne L\u00F6sungen)
 qti.form.summary.detailed=Detailliert (mit L\u00F6sungen)
 qti.form.summary.none=Keine Eingabe notwendig.
 qti.form.summary.section=Sektionszusammenfassung (ohne L\u00F6sungen)
+qti.form.test.date=Testzeitraum festlegen
 qti.form.test.title=Test
 reopen=Erneut starten
 reopen.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut starten. Der Testteilnehmende kann den Test dann dort weiterf\u00FChren, wo er aufgeh\u00F6rt hat. Falls der Test auf 1 Versuch beschr\u00E4nkt ist, m\u00FCssen auﬂerdem die Versuche zur\u00FCckgesetzt werden, damit der Testteilnehmende den Test weiterf\u00FChren kann.
@@ -155,6 +158,7 @@ replace.wizard.title=Test oder Fragebogen austauschen
 replace.wizard.title.step1=Neue Lernressource ausw\u00E4hlen
 replace.wizard.title.step2=Informationen zu den Resultaten
 replace.wizard.title.step3=Benutzer informieren
+report.config=Report
 reporter.unavailable=$de.bps.onyx.plugin.course.nodes.iq\:reporter.unavailable
 reset.test.data.title=Daten von Test zur\u00FCcksetzen
 retrieve.tests.title=$org.olat.ims.qti.statistics.ui\:menu.pull.tests.title
@@ -179,6 +183,7 @@ tool.delete.data=Alle Daten zur\u00FCcksetzen
 tool.extra.time=Testzeit verl\u00E4ngern
 tool.pull=Laufenden Test einziehen
 time.limit.max=Zeitbeschr\u00E4nkung
+time.limit.test.explain=Der Test dauert maximal <strong>{0}</strong>.
 warning.assessment.mode=Folgende Pr\u00FCfungkonfiguration ist aktiv:
 warning.assessment.mode.date={0} von {1} bis {2}
 warning.test.with.essay=$org.olat.ims.qti.editor\:warning.test.with.essay
