--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -140,6 +140,7 @@ qti.form.summary.responses=Answer, submitted by participant
 qti.form.summary.section=Section abstract (without solutions)
 qti.form.summary.sections=Section summary
 qti.form.summary.solutions=Solution
+qti.form.test.date=Set assessment period
 qti.form.test.title=Test
 reopen=Start again
 reopen.explanation=This test has been finished. You can restart the test. The test participant continues the test where he left it. If the test is limited to 1 attempt, the number of attempts must be reset so the test participants can continue the test.
@@ -154,6 +155,7 @@ replace.wizard.title=Replace a test or questionnaire
 replace.wizard.title.step1=Select new learning resource
 replace.wizard.title.step2=Information on results
 replace.wizard.title.step3=Notify users
+report.config=Report
 reporter.unavailable=$de.bps.onyx.plugin.course.nodes.iq\:reporter.unavailable
 reset.test.data.title=Reset data of test
 retrieve.tests.title=$org.olat.ims.qti.statistics.ui\:menu.pull.tests.title
