OO-3249: Add copied and converted items to lists, favorites, pools and groups

--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_de.properties
@@ -13,7 +13,13 @@ classification.taxonomy.level=Fachbereich
 classification.taxonomy.parents=Pfad
 collection.creationDate=Erstellt am
 collection.name=Name
+collection.add.to.source=Fragen zur Liste "{0}" hinzuf\u00FCgen
 commands=Frage
+confirm.copy.button=Kopieren
+confirm.copy.editable=Andere Benutzer d\u00FCrfen die Frage bearbeiten
+confirm.copy.message=Wollen Sie diese Fragen wirklich kopieren?
+confirm.copy.questions=Fragen
+confirm.copy.title=Kopieren
 confirm.delete.button=L\u00F6schen
 confirm.delete.confirmation=Alle Fragen l\u00F6schen
 confirm.delete.confirmation.error=Bitte best\u00E4tigen.
@@ -22,6 +28,7 @@ confirm.delete.title=L\u00F6schen
 confirm.delete.message=Wollen Sie diese Fragen wirklich l\u00F6schen? Sie k\u00F6nnen nicht wiederhergestellt werden.
 confirm.delete.source=Wollen Sie wirklich diese Liste l\u00F6schen?
 confirm.unshare=Wollen Sie wirklich diese Frage von "{0}" entfernen?
+convert.editable=Andere Benutzer d\u00FCrfen die Frage bearbeiten
 convert.format=Format
 convert.item=Konvertieren
 convert.item.msg=Wollen sie diese {0} Fragen in das folgende Format konvertieren?
@@ -29,8 +36,8 @@ convert.item.not.possible=Sie haben keine Frage gew\u00E4hlt dass Sie konvertier
 convert.item.successful={0} Frage(n) wurde erfolgreich konvertiert.
 convert.item.warning={0} Frage(n) konnte nicht konvertiert werden.
 convert.qti21.hint=Informationen zum Konvertieren von QTI 1.2 zu QTI 2.1 finden Sie im Handbuch
+convert.questions=Fragen
 copy=Kopieren
-copy.confirmation=Wollen Sie wirklich diese Frage kopieren?
 create.collection.description=Geben Sie Ihrer Liste einen Namen.
 create.list=Liste erstellen
 create.pool=Pool erstellen
@@ -145,6 +152,7 @@ list=Listen
 locked.readonly=Die Frage ist bereits durch '{0}' ge\u00F6ffnet. Sie kann deshalb nicht bearbeitet werden.
 manage.owners=Bearbeiten
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Favorit"> </i>
+mark.add.to.source=Fragen als Favoriten markieren
 menu.admin=Administration
 menu.admin.alt=Administration
 menu.admin.levels=Stufe
@@ -184,6 +192,7 @@ my.share=Meine Shares
 new.item=Frage erstellen
 next=N\u00E4chste
 numberOfRatings=Anzahl Bewertungen
+pool.add.to.source=Fragen zum Pool "{0}" hinzuf\u00FCgen
 pool.key=ID
 pool.name=Name
 pool.owners=Besitzer
@@ -243,6 +252,7 @@ root.taxonomyLevel=Fachbereiche
 select.group=Freigeben
 select.item=$\:details
 select.pool=In Pool freigeben
+share.add.to.source=Fragen zur Gruppe "{0}" hinzuf\u00FCgen
 share.editable=Editieren
 share.group=In Gruppe freigeben
 share.item=Freigeben
