--- a/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/_i18n/LocalStrings_en.properties
@@ -13,7 +13,13 @@ classification.taxonomy.level=Subject
 classification.taxonomy.parents=Path
 collection.creationDate=Created at
 collection.name=Name
+collection.add.to.source=Add questions to list "{0}"
 commands=Question
+confirm.copy.button=Copy
+confirm.copy.editable=Allow other users to edit the question
+confirm.copy.message=Do you really want to copy the questions?
+confirm.copy.questions=Questions
+confirm.copy.title=Copy
 confirm.delete.button=Delete
 confirm.delete.confirmation=Delete all questions
 confirm.delete.confirmation.error=Please confirm
@@ -21,6 +27,7 @@ confirm.delete.questions=Questions
 confirm.delete.title=Delete
 confirm.delete.message=Do you really want to permanently delete these questions? They can not be recovered.
 confirm.unshare=Do your really want to remove this question "{0}"?
+convert.editable=Allow other users to edit the question
 convert.item=Convert
 convert.item.not.possible=You haven't selected any question you can convert.
 convert.item.msg=Do you want to convert the {0} question(s) in the following format?
@@ -28,8 +35,8 @@ convert.item.successful={0} question(s) successfully converted.
 convert.item.warning={0} was not converted.
 convert.format=Format
 convert.qti21.hint=You will find information about the conversion from QTI 1.2 to QTI 2.1 in the manual
+convert.questions=Questions
 copy=Copy
-copy.confirmation=Do you really want to copy this question?
 create.collection.description=Give your list a name.
 create.list=Create list
 create.pool=Create pool
@@ -129,7 +136,7 @@ item.type.matchdraganddrop=Drag and Drop
 item.type.mc=Multiple-Choice
 item.type.numerical=Numerical input
 item.type.sc=Single-Choice
-item.type.unkown=Unkown
+item.type.unkown=Unknown
 item.type.upload=Upload file
 lifecycle.status=Status
 lifecycle.status.draft=Draft
@@ -144,6 +151,7 @@ list=Lists
 locked.readonly=The question is opened by '{0}'. Therefore, you are not able to edit the question.
 manage.owners=Edit
 mark=<i class\="o_icon o_icon_bookmark_header o_icon-lg" title\="Bookmark"> </i>
+mark.add.to.source=Mark questions as favorites
 menu.admin=Administration
 menu.admin.alt=Administration
 menu.admin.levels=Level
@@ -158,8 +166,8 @@ menu.admin.types=Type
 menu.admin.types.alt=Type
 menu.database=My question bank
 menu.database.alt=My question bank
-menu.database.favorit=My favourites
-menu.database.favorit.alt=My favourites
+menu.database.favorit=My favorites
+menu.database.favorit.alt=My favorites
 menu.database.my=My questions
 menu.database.my.alt=My questions
 menu.final=Final
@@ -183,6 +191,7 @@ my.share=My shares
 new.item=Create question
 next=Next
 numberOfRatings=Number of ratings
+pool.add.to.source=Add questions to pool "{0}"
 pool.key=ID
 pool.name=Name
 pool.owners=Owners
@@ -194,7 +203,6 @@ process.activate.review=Review question
 process.activate.review.description=The question is in the status 'Review'. Please review the question carefully to technical correctness and with regards to content. Subsequently you have to push the button below to rate the question. 
 process.activate.start.review=Start review process
 process.activate.start.review.description=You can now create and revise the question, until it has a sufficient quality. If the question is completely created, you have to start the review process by pushing the button below. Afterwards the question can not be edited anymore.
-Hier k\u00F6nnen Sie die Frage erstellen und \u00FCberarbeiten, bis sie einer ausreichenden Qualit\u00E4t vorliegt. 
 process.comment=Comment
 process.confirm.endOfLife=If a question is end of life, the question can not be used anymore. Do you really want to set the end of life for the question "{0}"?
 process.draft.set=The status of the question has been changed to "$\:lifecycle.status.draft".
@@ -241,6 +249,7 @@ root.taxonomyLevel=Subjects
 select.group=Share
 select.item=$\:details
 select.pool=Share with pool
+share.add.to.source=Add questions to group "{0}"
 share.editable=Edit
 share.group=Share with group
 share.item=Share
