--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -44,6 +44,7 @@ level.translation=\u00DCbersetzung
 license.id=ID
 license.key=Lizenz
 lower.limit=Untergrenze f\u00FCr positive Beurteilung
+lower.limit.desc=Bei der Beurteilungsmethode "Untergrenze" wird eine Frage auf den Status "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion" gesetzt, wenn die minimale Anzahl der Bewertungen erreicht ist und alle Bewertungen h\u00F6her oder gleich hoch sind wie die Untergrenze. Wenn eine Bewertung unterhalb der Untergrenze liegt, dann wird der Status der Frage sofort auf "$org.olat.modules.qpool.ui\:lifecycle.status.revised" gesetzt, auch wenn die minimale Anzahl Bewertungen noch nicht erreicht ist.
 lower.limit.provider.name=Untergrenze
 number.of.ratings=Anzahl Beurteilungen pro Frage
 pool.manager.allowed=Der Poolverwalter darf
