--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -42,7 +42,7 @@ level.level=Level
 level.translation=Translation
 license.id=ID
 license.key=License
-lower.limit.desc=The decision method "Lower limit" changes the status of a question to "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion", if the minimun number of ratings is reached and if all ratings are equal or higher then the lower limit. If a rating is lower then the lower limit, the question status this immediately changed to "$org.olat.modules.qpool.ui\:lifecycle.status.revised", even if the minimum number of ratings is not reached yet.
+lower.limit.desc=The decision method "Lower limit" changes the status of a question to "$org.olat.modules.qpool.ui\:lifecycle.status.finalVersion", if the minimum number of ratings is reached and if all ratings are equal or higher then the lower limit. If a rating is lower then the lower limit, the question status this immediately changed to "$org.olat.modules.qpool.ui\:lifecycle.status.revised", even if the minimum number of ratings is not reached yet.
 lower.limit.provider.name=Lower limit
 lower.limit=Lower limit for positive decision
 number.of.ratings=Number of ratings per question
