no-jira: wording

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -6,6 +6,7 @@ Intro.test=Press the start button to begin with your test.
 assessment.documents.title=Assessment documents
 attempts.nomoreattempts=There are no more attempts at your disposal.
 attempts.yourattempts=Number of attempts
+button.export=Export results
 button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=Resource change log
 choosenfile.self=Self-test
