OO-3112: Use single key translation dialog

--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_de.properties
@@ -77,6 +77,8 @@ taxonomy.competences=Fachbereiche mit der Kompetenz "Dozieren" oder "Verwalten"
 taxonomy.selectable=Ausw\u00E4lbare Fachbereiche
 taxonomyLevel.deleted=Fachbereich wurde erfolgreich gel\u00F6scht
 taxonomyLevel.notdeleted=Fachbereich konnte nicht gel\u00F6scht werden, eventuell wird er bereits verwendet.
+translation=\u00dcbersetzung
+translation.missing=Keine \u00dcbersetzung
 type.key=ID
 type.translation=\u00DCbersetzung
 type.type=Typ
