--- a/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/qpool/ui/admin/_i18n/LocalStrings_en.properties
@@ -76,6 +76,8 @@ taxonomy.competences=Subjects with competence "teach" or "manage"
 taxonomy.selectable=Selectable subjects
 taxonomyLevel.deleted=Subject has been successfully deleted.
 taxonomyLevel.notdeleted=The subject cannot be deleted, it is probably in use.
+translation=Translation
+translation.missing=Translation missing
 type.key=ID
 type.translation=Translation
 type.type=Type
