--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -7,7 +7,7 @@ Intro.test=Dr\u00FCcken Sie Start, um den Test zu beginnen.
 attempts.nomoreattempts=Es stehen Ihnen keine weiteren Versuche zur Verf\u00FCgung.
 attempts.yourattempts=Anzahl gemachter Versuche
 block.dates.start=Sie werden den Test am <strong>{0}</strong> starten k\u00F6nnen.
-block.dates.start.end=Der Test kann zwischen den <strong>{0}</strong> und den <strong>{1}</strong> gestartet werden.
+block.dates.start.end=Der Test kann zwischen dem <strong>{0}</strong> und dem <strong>{1}</strong> gestartet werden.
 button.export=Resultate exportieren
 button.stats=$org.olat.ims.qti.statistics.ui\:menu.title
 changelog.title=\u00C4nderungsverlauf der Ressource
