OO-3146: add a message to explain the side-effect of the option

--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_de.properties
@@ -49,6 +49,7 @@ disclaimer=Information
 disclaimer.file.invalid=Gewisse Informationen k\u00F6nnen nicht angezeigt werden weil die referenzierte Datei {0} nicht mehr vorhanden ist. Bitte benachrichtigen Sie die Kursleitung.
 error.assessment.pulled=Das Test wurde von Ihrem Tutor eingezogen.
 error.assessment.stopped=Das Test wurde beendet.
+error.begin.after.end=Das Beginn-Datum muss vor dem Ende-Datum liegen.
 error.entry.locked=Die gew\u00E4hlte Lernressource wird momentan von {0} editiert. Bitte w\u00E4hlen Sie eine andere Lernressource oder versuchen Sie es sp\u00E4ter nochmals.
 error.reopean.failed=Wieder\u00F6ffnen des Tests k\u00F6nnte nicht gemacht werden
 error.self.undefined.long=Es ist kein Selbsttest f\u00FCr "{0}" definiert. W\u00E4hlen Sie einen unter "Selbsttest-Konfiguration" aus.
@@ -144,6 +145,8 @@ qti.form.summary.detailed=Detailliert (mit L\u00F6sungen)
 qti.form.summary.none=Keine Eingabe notwendig.
 qti.form.summary.section=Sektionszusammenfassung (ohne L\u00F6sungen)
 qti.form.test.date=Testzeitraum festlegen
+qti.form.test.date.confirm=W\u00E4hrend dem Testzeitraum kann der Test gestartet werden. Sobald die "bis-Zeit" erreicht ist, wird der Test automatisch beendet. Dies auch dann, wenn die definierte Testzeit noch nicht aufgebraucht ist.
+qti.form.test.date.help=$\:qti.form.test.date.confirm
 qti.form.test.title=Test
 reopen=Erneut starten
 reopen.explanation=Dieser Test wurde beendet. Sie k\u00F6nnen den Test erneut starten. Der Testteilnehmende kann den Test dann dort weiterf\u00FChren, wo er aufgeh\u00F6rt hat. Falls der Test auf 1 Versuch beschr\u00E4nkt ist, m\u00FCssen auﬂerdem die Versuche zur\u00FCckgesetzt werden, damit der Testteilnehmende den Test weiterf\u00FChren kann.
