--- a/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/course/nodes/iq/_i18n/LocalStrings_en.properties
@@ -47,6 +47,7 @@ disclaimer=Information
 disclaimer.file.invalid=Some information cannot be displayed because the referenced file {0} is not available anymore. Please contact your course administrator.
 error.assessment.pulled=The assessment is finished.
 error.assessment.stopped=Your tutor pull your test.
+error.begin.after.end=The start date must be before the end date.
 error.entry.locked=The learning resource selected is currently edited by {0}. Please select another learning resource or try again later.
 error.reopean.failed=Reopeing the test cannot be done.
 error.resource.corrupted=The learning resource cannot be interpreted. It seems corrupted or with the wrong format.
@@ -142,6 +143,8 @@ qti.form.summary.section=Section abstract (without solutions)
 qti.form.summary.sections=Section summary
 qti.form.summary.solutions=Solution
 qti.form.test.date=Set assessment period
+qti.form.test.date.confirm=During the test  period the test can be started. As soon as the "until-time" is reached, the test will be finished automatically. This occurs also if the time limit is not yet reached.
+qti.form.test.date.help=$\:qti.form.test.date.confirm
 qti.form.test.title=Test
 reopen=Start again
 reopen.explanation=This test has been finished. You can restart the test. The test participant continues the test where he left it. If the test is limited to 1 attempt, the number of attempts must be reset so the test participants can continue the test.
