OO-3185: Add the summary to the top of the portfolio binder toc and list

--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_en.properties
@@ -351,6 +351,8 @@ status.user.incoming=New
 status.user.inProcess=In process
 status.user.done=Done
 summary=Summary
+summary.close=Hide summary
+summary.open=Open summary
 summary.placeholder=Short summary about the content
 table.grading.failed.points=<span class\="o_state o_failed"><i class\="o_icon o_icon_failed"> </i> {0} Point(s)</span>
 table.grading.no=no grading yet
